jump  between platforms

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
     <title>freeside</title>
   </head>
   <body>
-    <h1 id='head'> freeside</h1>
+
 
     <div class="container">
+      <div id='head'> freeside</div>
       <div class='columns is-multiline'>
         <div class="column is-one-quarter">
           <div id='scoreboard'>
